fix(ai-help): scroll horizontally on overflow

--- a/client/src/plus/ai-help/index.scss
+++ b/client/src/plus/ai-help/index.scss
@@ -233,6 +233,7 @@
     }
 
     .ai-help-message-content {
+      overflow-x: scroll;
       width: 100%;
 
       p {
